<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Magic: Deck Builder</string>
    <string name="search">Search</string>
    <string name="add_player">Add Player</string>
    <string name="random">View Random Card</string>
    <string name="nameHint">Card Name</string>
    <string name="goBack">Go Back</string>
    <string name="advancedSearch">Advanced Search</string>
    <string name="multicolor">Multicolor\nOnly</string>
    <string name="W">White</string>
    <string name="U">Blue</string>
    <string name="B">Black</string>
    <string name="R">Red</string>
    <string name="G">Green</string>
    <string name="shareCard">Share Card</string>
    <string name="buyCard">Buy Card</string>
    <string name="addToDeckDialog">Add Card to a Deck</string>
    <string name="AND">Include\nColor</string>
    <string name="OR">Ignore\nColor</string>
    <string name="submit">Submit</string>
    <string name="textContains">Text Contains</string>
    <string name="add">Add</string>
    <string name="typeContains">Subtype</string>
    <string name="search_hint">Search for a Card</string>
    <string name="app_label">Magic: Deck Builder</string>
    <string name="deck_name">Deck Name</string>
    <string name="add_cards">Add Cards</string>
    <string name="add_deck">Add Deck</string>
    <string name="my_decks">My Decks</string>
    <string name="archenemy">Archenemy</string>
    <string name="cards_in_deck">Cards in Deck</string>
    <string name="save_deck">Save Deck</string>
    <string name="to_website">To TCGPlayer.com</string>
    <string name="plusFive">+5</string>
    <string name="pound">#</string>
    <string name="high_price">High Price</string>
    <string name="mean_price">Mean Price</string>
    <string name="low_price">Low Price</string>
    <string name="zeroes">0.00</string>
    <string name="new_scheme">New Scheme</string>
    <string name="go_back">Go Back</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
    <string name="drawer_open">Magic: Deck Builder</string>
    <string name="drawer_close">Magic: Deck Builder</string>
    <string name="hello_world">Hello world!</string>
    <string name="apply">Apply Filter</string>
    <string name="filter_by_set">Filter by Set</string>
    <string name="filter_by_type">Filter by Type</string>
    <string name="filter_by_tournament">Filter by Tournament</string>

    <string-array name="operating_systems">
        <item>Home</item>
        <item>Life Counter</item>
        <item>Planeschase</item>
        <item>Archenemy</item>
        <item>My Decks</item>
        <item>My Cart</item>
        <item>Advanced Search</item>
        <item>Discovery Fragment</item>
        <item/>
        <item/>
        <item/>
        <item/>
    </string-array>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="LIFE">LIFE</string>
    <string name="POISON">POISON</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">Search</string>

</resources>