<?xml version="1.0" encoding="utf-8"?>





<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:visibility="gone">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:weightSum="2"
       >

       <TextView
           android:id="@+id/txtViewSet"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/filter_by_set"
           android:gravity="center"
           android:layout_gravity="center"
           />
       <Spinner
           android:id="@+id/filterBySet"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           />


   </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        >

        <TextView
            android:id="@+id/txtViewType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter_by_type"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <Spinner
            android:id="@+id/filterByType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        >

        <TextView
            android:id="@+id/txtViewtournament"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter_by_tournament"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <Spinner
            android:id="@+id/filterByTournamentLegality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />


    </LinearLayout>






    <Button
        android:id="@+id/applyFilters"
        android:text="@string/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />





</LinearLayout>